crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__bonecrusher_giant_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredTrigger": {
        "mode": "BecomesTarget",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "DealDamage",
            "amount": {
              "type": "Fixed",
              "value": 2
            },
            "target": {
              "type": "TriggeringSpellController"
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "valid_card": {
          "type": "SelfRef"
        },
        "origin": null,
        "destination": null,
        "trigger_zones": [
          "Battlefield"
        ],
        "phase": null,
        "optional": false,
        "damage_kind": "Any",
        "secondary": false,
        "valid_target": null,
        "valid_source": {
          "type": "StackSpell"
        },
        "description": "Whenever ~ becomes the target of a spell, ~ deals 2 damage to that spell's controller.",
        "constraint": null,
        "condition": null,
        "batched": false
      }
    }
  ],
  "source_text": "Whenever this creature becomes the target of a spell, this creature deals 2 damage to that spell's controller.",
  "card_name": "Bonecrusher Giant"
}
