crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__deadly_rollick_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "ChangeZone",
          "origin": null,
          "destination": "Exile",
          "target": {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": null,
            "properties": []
          },
          "owner_library": false,
          "enter_transformed": false,
          "under_your_control": false,
          "enter_tapped": false,
          "enters_attacking": false
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "Exile target creature.",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "CastingOption": {
        "kind": "CastWithoutManaCost",
        "condition": {
          "type": "YouControlSubtypeCountAtLeast",
          "subtype": "commander",
          "count": 1
        }
      }
    }
  ],
  "source_text": "If you control a commander, you may cast this spell without paying its mana cost.\nExile target creature.",
  "card_name": "Deadly Rollick"
}
